# ml-finance-credit-default

./: .gitignore  Balance Sheet Imputation.ipynb  Risk Calc.ipynb  balance_eda.ipynb  default_rates.ipynb  dictionary.pickle  lr_modeling.ipynb  marginal_changes.py
eda/: Risk Calc EDA.ipynb  balance_eda.ipynb  default_rates.ipynb  eda.ipynb
eda/.ipynb_checkpoints/: Risk Calc EDA-checkpoint.ipynb
final_harness/: calibrator.py  easy_model_test.ipynb  harness_functions.py  harness_test.ipynb  model_functions.py  preproc_functions.py  preproc_params.pkl  train_final_model.ipynb  wf.ipynb  wf_scaled.ipynb  xgb_model_functions.py
final_harness/harness/: harness.py  harness_test_copy.ipynb  (+4 more)
lavender_harness/: harness.py
lavender_no_leakage/: README.txt  calibrator.py  custom_bins_v2.pkl  harness.py  preproc_for_harness.py  preproc_params_v2.pkl  trained_model_v2.pkl
lavender_no_leakage/fin-env-24/: pyproject.toml
lavender_submission_code/: README.txt  calibrator.py  estimator_training.ipynb  harness.py  trained_model.pkl  walk_forward_analysis.ipynb  xgb_model_functions.py
modeling/: baseline_model.ipynb  first_firm_model.ipynb  first_firm_walk_forward_testing.ipynb  lr_modeling.ipynb  quantile_custom_bins.pkl  recurring_firm_model.ipynb  recurring_firm_walk_forward_testing.ipynb  walk_forward_testing.ipynb
processing/: Balance Sheet Imputation.ipynb  Imputation Random Combinations Testing.ipynb  Italian Cities.ipynb  Preproc-Function-Harness.ipynb  Preproc-Function.ipynb  Preproc.ipynb  ateco_dictionary.py  quantile_testing.ipynb  risk_calc_features.ipynb
(+19 files in other folders)
