[tool.poetry]
name = "3001 ml in finance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "2.1.3"
pandas = "2.2.3"
xgboost = "^1.7.1"
jupyter = "^1.0.0"
ipykernel = "^6.18.0"
scikit-learn = "1.5.2"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
lightgbm = "4.5.0"
scipy = "1.14.1"
imblearn = "^0.0"
statsmodels = "0.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
